test/classes/figueroa/BogusDestructors3.good
BogusDestructors3.chpl:1: error: destructors must be methods
