test/classes/figueroa/BogusDestructors3.chpl
proc ~bar (x,y) {writeln("inside ~bar");}
